--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,8 +1,8 @@
 #platform {
-    background-color: black;
+    background-color: pink;
     height: 20px;
     position: relative;
-    width: 40px;
+    width: 150px;
 }
 
 body {
