--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -33,13 +33,54 @@ Canvas {
 .title-div {
     text-align: center;
     background-color: #ffccb3;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 250px;
+    margin-right: 250px;
 }
 
 .title {
+    color: white;
     font-family: Bradley Hand;
     font-weight: 900px;
     font-size: 50px;
     border: 5px #ff884d solid;
 }
+
+/* .score-css {
+    border: 2px solid navy;
+    padding: 20px 20px 20px 20px;
+    margin-left: 18px;
+    width: 400px;
+    margin: 0 auto
+} */
+
+.scores-list {
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+    width: 400px;
+    margin: 0 auto
+}
+
+.current-user {
+    text-align: center;
+    padding: 20px 20px 0px 20px;
+    width: 400px;
+    margin: 0 auto;
+}
+
+.start-btn {
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 20px;
+}
+
+.tracker {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+}
+
+/* .score-li {
+    text-align: justify;
+} */
