added fill color to form container

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -30,7 +30,8 @@
                 padding: 20px 20px 20px 20px;
                 margin-left: 18px;
                 width: 400px;
-                margin: 0 auto
+                margin: 0 auto;
+                background-color: #ccffff;
             }
             
             .title-div {
