--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -12,7 +12,7 @@
             }
             
             Canvas {
-                background: #ccffff;
+                background: black;
                 margin-left: 20%;
                 margin-right: 20%;
                 border: 5px navy solid;
